Fixed display issue. New issue with overflowing while inserting new list item